# copr-api-hs

./: .travis.yml  CHANGELOG.md  Makefile  README.md  cabal.project  copr-api.cabal  copr-hs.cabal  copr.cabal  stack-lts16.yaml  stack.yaml
.github/workflows/: build.yml  ci.yml
Web/Fedora/: Copr.hs
Web/Fedora/Copr/: API.hs
src/: CoprHs.hs
src/Web/Fedora/: Copr.hs
src/Web/Fedora/Copr/: API.hs
