cabal-version:       2.4
name:                copr-hs
version:             0.0.0.0
synopsis:            Copr API client libary
description:         Copr API client libary
homepage:            https://github.com/juhp/copr-hs
bug-reports:         https://github.com/juhp/copr-hs/issues
license:             GPL-3.0-only
license-file:        LICENSE
author:              Jens Petersen
maintainer:          Jens Petersen <petersen@redhat.com>
copyright:           2020 Jens Petersen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/copr-hs.git

common common-options
  build-depends:       base >= 4.9.1.0 && < 4.14
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     CoprHs
