cabal-version:       2.4
name:                copr
version:             0.1
synopsis:            Copr API client libary
description:         Fedora copr client api library
homepage:            https://github.com/juhp/copr-hs
bug-reports:         https://github.com/juhp/copr-hs/issues
license:             GPL-3.0-only
license-file:        LICENSE
author:              Jens Petersen
maintainer:          Jens Petersen <petersen@redhat.com>
copyright:           2020 Jens Petersen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/copr-hs.git

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Web.Fedora.Copr

  build-depends:
                base >= 4.7 && <5
              , aeson
              , bytestring
              , containers
              , directory
              , filepath
              , http-conduit
              , text

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
