cabal-version:       1.22
name:                copr
version:             0.1
synopsis:            Copr API client libary
description:         Fedora copr client api library
homepage:            https://github.com/juhp/copr-hs
bug-reports:         https://github.com/juhp/copr-hs/issues
license:             GPL-3.0
license-file:        LICENSE
author:              Jens Petersen
maintainer:          Jens Petersen <petersen@redhat.com>
copyright:           2020 Jens Petersen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/juhp/copr-hs.git

flag microlens
  description:       Use smaller microlens instead of lens
  default:           False

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Web.Fedora.Copr
                       Web.Fedora.Copr.API
  hs-source-dirs:      src

  build-depends:
                base >= 4.7 && <5
              , aeson
              , bytestring
              , directory
              , filepath
              , http-query
              , text
              , unordered-containers
  if flag(microlens)
      build-depends:   microlens, microlens-aeson
  else
      build-depends:   lens, lens-aeson

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
